<resources>
    <string name="appName">In2theWok</string>
    <string name="welcomeToApp">Hello! Welcome to In2theWok!</string>
    <string name="createUsername">Please enter a username to get started!</string>
    <string name="getStarted">Get Started</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="backgroundCredit">Image: Manek Singh on Unsplash</string>
    <string name="emailAddress">Email Address:</string>
    <string name="password">Password:</string>
    <string name="choosePassword">Choose a password:</string>
    <string name="submit">Submit</string>
    <string name="questionOne">What is your favourite cooking smell?</string>
    <string name="questionTwo">What is your favourite fruit?</string>
    <string name="questionThree">What is your favourite vegetable?</string>
    <string name="questionFour">What is your favourite type of cuisine?</string>
    <string name="createPost">Make A New Post</string>
    <string name="clear">Clear</string>
    <string name="recipeTitleHint">What is your special recipe called?</string>
    <string name="cuisineTypeHint">What kind of dish is your recipe? e.g. Italian, Mexican, Vegan etc.</string>
    <string name="recipeStoryHint">Why is this recipe special to you? What does it remind you of?</string>
    <string name="ingredients">Ingredients:</string>
    <string name="addIngredientHint">Type an ingredient here then tap \'Add New Ingredient\'</string>
    <string name="btnAddIngredient">Add New Ingredient</string>
    <string name="addStepHint">Type a recipe step here then tap \'Add New Step\'</string>
    <string name="steps">Steps:</string>
    <string name="btnAddStep">Add New Step</string>
    <string name="post">Post</string>
    <string name="addPhoto">Add A Photo</string>
    <string name="changePhoto">Change Photo</string>
    <string name="funFactArticles">Fun Fact Articles</string>
    <string name="home">Home</string>
    <string name="logOut">Log Out</string>
    <string name="userRecommendations">Your Recommendations:</string>
    <string name="userBookmarks">Your Bookmarks:</string>
    <string name="healthInfo">Health Information</string>
    <string name="userProfile">User Profile</string>
    <string name="userAnswerQ1">Your favourite cooking smell:</string>
    <string name="userAnswerQ2">Your favourite fruit:</string>
    <string name="userAnswerQ3">Your favourite vegetable:</string>
    <string name="userAnswerQ4">Your favourite cuisine:</string>
    <string name="userPosts">Your Posts:</string>
    <string name="bookmarkRecipe">Bookmark Recipe</string>
    <string name="comment">Add Comment</string>
    <string name="comments">Comments:</string>
    <string name="profile">Profile</string>
    <string name="newPost">New Post</string>
    <string name="articles">Articles</string>
    <string name="info">info</string>
</resources>
