<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PrototypeCS408"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/manek_singh_unsplash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/faded_black_bg"
        android:theme="@style/Theme.PrototypeCS408"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/in2thewok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:padding="10dp"
            android:text="@string/appName"
            android:textColor="@color/white"
            android:textSize="70sp"
            app:layout_constraintBottom_toTopOf="@+id/clContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/Theme.PrototypeCS408"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/in2thewok"
            app:layout_constraintStart_toStartOf="@id/in2thewok"
            app:layout_constraintTop_toTopOf="@id/in2thewok"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/btnLoginMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintBottom_toTopOf="@+id/btnRegisterMain"
                app:layout_constraintEnd_toEndOf="@id/btnRegisterMain"
                app:layout_constraintStart_toStartOf="@id/btnRegisterMain"
                app:layout_constraintTop_toBottomOf="@id/btnRegisterMain"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/btnRegisterMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="@id/clContainer"
                app:layout_constraintEnd_toEndOf="@id/clContainer"
                app:layout_constraintStart_toStartOf="@id/clContainer"
                app:layout_constraintTop_toBottomOf="@id/btnLoginMain"
                app:layout_constraintVertical_chainStyle="packed" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono_italic"
            android:text="@string/backgroundCredit"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
