<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/homeFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50sp"
    tools:context=".RecipeFragment">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <LinearLayout
                android:id="@+id/llHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:id="@+id/tvHomeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:text="@string/home"
                    android:textColor="@color/okabe_ito_vermilion"
                    android:textSize="30sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logOut"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/tvRecTitle"
                android:text="@string/userRecommendations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="@id/llHome"
                app:layout_constraintTop_toBottomOf="@id/llHome" />

            <TextView
                android:id="@+id/tvBookmarkTitle"
                android:text="@string/userBookmarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:textSize="30sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvRecs" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecs"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRecTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBookmarks"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBookmarkTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>